fixed thanks page top spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,7 +56,7 @@ body {
 .navbar {
     width: 100%;
     z-index: 1;
-    position: fixed;
+    /* position: absolute; */
 }
 
 .page {
